fixed some typos

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -318,6 +318,12 @@
 	Year = {2011},
 }
 
+@misc{junit,
+  title        = {JUnit: The programmer-friendly testing framework for Java and the JVM},
+  howpublished = {\url{https://junit.org}},
+  note         = {Último acceso: julio 2025}
+}
+
 @misc{apache,
 	Date-Added = {2018-11-20 04:22:28 +0000},
 	Date-Modified = {2018-11-20 04:27:36 +0000},
